--- a/HTML/empleados.html
+++ b/HTML/empleados.html
@@ -98,7 +98,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Ana María Ríos</td>
+                    <td>Ana María Barrios</td>
                     <td>Abogada de Tránsito</td>
                     <td><a class="button" href="editar_empleado.html?id=1">Ver / Editar</a></td>
                 </tr>
