--- a/HTML/Módulos.html
+++ b/HTML/Módulos.html
@@ -34,7 +34,7 @@
     <div class="module">
       <img src="/mnt/data/824874f9-a553-43f3-8a62-f9519b6f87aa.png" alt="Ventas">
       <div class="module-title">Ventas</div>
-      <a href="ventas.html"><button class="module-button">Ver Ventas</button></a>
+      <a href="programar_citas.html"><button class="module-button">Ver Ventas</button></a>
     </div>
   </div>
 
