--- a/HTML/Servicios.html
+++ b/HTML/Servicios.html
@@ -20,10 +20,10 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="pagina.html">NOSOTROS</a></li>
+                    <li><a href="home.html">NOSOTROS</a></li>
                     <li><a href="#">SERVICIOS</a></li>
                     <li><a href="programar_citas.html">AGENDAR CITA</a></li>
-                    <li><a href="contact.html">CONTÁCTENOS</a></li>
+                    <li><a href="contactar.html">CONTÁCTENOS</a></li>
                 </ul>
             </nav>
         </div>
