--- a/HTML/programar_citas.html
+++ b/HTML/programar_citas.html
@@ -17,10 +17,10 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="pagina.html">NOSOTROS</a></li>
+                    <li><a href="home.html">NOSOTROS</a></li>
                     <li><a href="Servicios.html">SERVICIOS</a></li>
                     <li><a href="#">AGENDAR CITA</a></li>
-                    <li><a href="Contact.html">CONTÁCTENOS</a></li>
+                    <li><a href="Contactar.html">CONTÁCTENOS</a></li>
                 </ul>
             </nav>
         </div>
