--- a/HTML/Contactar.html
+++ b/HTML/Contactar.html
@@ -10,7 +10,7 @@
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     
-    <link rel="stylesheet" href="../CSS/chatbot.css">
+    <link rel="stylesheet" href="../CSS/Chatbot.css">
 </head>
 
 <body>
@@ -80,7 +80,7 @@
                     <li><a href="Servicios.html">SERVICIOS</a></li>
                     <li><a href="programar_citas.html">AGENDAR CITA</a></li>
                     <li><a href="#">CONTÁCTENOS</a></li>
-                    <li><a href="../HTML/login.html">CERRAR SESIÓN</a></li>
+                    <li><a href="../HTML/InicioSesion.html">CERRAR SESIÓN</a></li>
                 </ul>
             </div>
             <div class="footer-social">
