--- a/HTML/Módulos.html
+++ b/HTML/Módulos.html
@@ -38,6 +38,12 @@
     </div>
   </div>
 
+  <!-- Botón de Cerrar Sesión -->
+  <div style="text-align: center; margin: 40px 0;">
+    <a href="InicioSesion.html"><button class="module-button" style="background-color: #d9534f; color: white;">Cerrar Sesión</button></a>
+  </div>
+
 </body>
 </html>
+
 
