--- a/HTML/programar_citas.html
+++ b/HTML/programar_citas.html
@@ -17,7 +17,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="home.html">NOSOTROS</a></li>
+                    <li><a href="Home.html">NOSOTROS</a></li>
                     <li><a href="Servicios.html">SERVICIOS</a></li>
                     <li><a href="#">AGENDAR CITA</a></li>
                     <li><a href="Contactar.html">CONTÁCTENOS</a></li>
@@ -80,7 +80,7 @@
                     <li><a href="servicios.html">SERVICIOS</a></li>
                     <li><a href="#">AGENDAR CITA</a></li>
                     <li><a href="Contact.html">CONTÁCTENOS</a></li>
-                    <li><a href="login.html">CERRAR SESIÓN</a></li>
+                    <li><a href="InicioSesion.html">CERRAR SESIÓN</a></li>
                 </ul>
             </div>
             <div class="footer-social">
