--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -1,98 +1,297 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Rastro Legal Vial</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <link rel="stylesheet" href="..//CSS/Home.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bienvenido</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../CSS/Home.css">
+    <style>
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+            font-family: 'Poppins', sans-serif;
+        }
+
+        body {
+            background-color: #f9f9f9;
+        }
+
+        a {
+            color: white;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+
+        a:hover {
+            color: #f1c40f;
+        }
+
+        .header {
+            background-color: #222;
+            color: white;
+            padding: 20px 0;
+        }
+
+        .menu.container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 2rem;
+        }
+
+        .logo {
+            font-size: 1.8rem;
+            font-weight: bold;
+            letter-spacing: 1px;
+        }
+
+        .navbar ul {
+            display: flex;
+            list-style-type: none;
+            gap: 2rem;
+        }
+
+        .navbar ul li a {
+            font-size: 1rem;
+        }
+
+        .header-img img {
+            width: 100%;
+            height: auto;
+            margin-top: 15px;
+            border-radius: 10px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+        }
+
+        .about-txt1 p {
+            color: #333;
+            text-align: justify;
+            font-size: 1.2rem;
+            padding: 1.5rem;
+            background: #fff;
+            margin: 1.5rem 0;
+            border-radius: 10px;
+            box-shadow: 0 2px 12px rgba(0, 0, 0, 0.1);
+        }
+
+        .about {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            gap: 2rem;
+            padding: 2rem;
+        }
+
+        .about-img img {
+            max-width: 100%;
+            border-radius: 10px;
+        }
+
+        .about-txt {
+            flex: 1;
+            min-width: 300px;
+        }
+
+        .about-txt h2 {
+            font-size: 2rem;
+            color: #222;
+            margin-bottom: 1rem;
+        }
+
+        .about-txt h3 {
+            color: #f1c40f;
+            margin-top: 1.5rem;
+        }
+
+        .about-txt p {
+            margin-top: 0.5rem;
+            color: #444;
+            text-align: justify;
+        }
+
+        .servicios {
+            background-color: #fff;
+            padding: 2rem;
+            text-align: center;
+        }
+
+        .servicios h2 {
+            font-size: 2rem;
+            color: #222;
+            margin-bottom: 2rem;
+        }
+
+        .servicios-content {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 1.5rem;
+        }
+
+        .servicio-1 {
+            background-color: #fafafa;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .servicio-1:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15);
+        }
+
+        .servicio-1 i {
+            font-size: 2rem;
+            color: #f1c40f;
+            margin-bottom: 1rem;
+        }
+
+        .servicio-1 h3 {
+            font-size: 1.2rem;
+            margin-bottom: 0.5rem;
+            color: #222;
+        }
+
+        .servicio-1 p {
+            color: #666;
+            font-size: 0.95rem;
+        }
+
+        footer.footer {
+            background-color: #222;
+            color: white;
+            padding: 2rem 0;
+        }
+
+        .footer-content {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 2rem;
+        }
+
+        .footer-logo,
+        .footer-links,
+        .footer-social {
+            flex: 1;
+            margin: 1rem 0;
+        }
+
+        .footer-links ul,
+        .footer-social ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        .footer-links ul li,
+        .footer-social ul li {
+            margin-bottom: 10px;
+        }
+
+        .footer-social ul {
+            display: flex;
+            gap: 1rem;
+        }
+
+        .footer-social i {
+            font-size: 1.2rem;
+            color: white;
+            transition: color 0.3s;
+        }
+
+        .footer-social i:hover {
+            color: #f1c40f;
+        }
+    </style>
 </head>
+
 <body>
+    <header class="header">
+        <div class="menu container">
+            <a href="#" class="logo">RASTRO LEGAL VIAL</a>
+            <input type="checkbox" id="menu" hidden>
+            <label for="menu">
+                <img src="../IMAGES/menu.png" class="menu-icono" alt="menu">
+            </label>
+            <nav class="navbar">
+                <ul>
+                    <li><a href="#">NOSOTROS</a></li>
+                    <li><a href="Servicios.html">SERVICIOS</a></li>
+                    <li><a href="programar_citas.html">AGENDAR CITA</a></li>
+                    <li><a href="Contact.html">CONTÁCTENOS</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="header-content container">
+            <div class="header-img">
+                <img src="../IMAGES/header.jpeg" alt="">
+            </div>
+            <div class="about-txt1">
+                <p>
+                    En RASTRO LEGAL VIAL, nos especializamos en ofrecer asesoría y defensa legal en todas las áreas relacionadas con el derecho vial...
+                </p>
+            </div>
+        </div>
+    </header>
 
-  <header class="header">
-    <div class="container menu">
-      <a href="#" class="logo">RASTRO LEGAL VIAL</a>
-      <input type="checkbox" id="menu">
-      <label for="menu"><img src="..//IMAGES/menu.png" class="menu-icono" alt="menu" /></label>
-      <nav class="navbar">
-        <ul>
-          <li><a href="#">Nosotros</a></li>
-          <li><a href="Servicios.html">Servicios</a></li>
-          <li><a href="programar_citas.html">Agendar Cita</a></li>
-          <li><a href="Contactar.html">Contáctenos</a></li>
-        </ul>
-      </nav>
-    </div>
+    <section class="about container">
+        <div class="about-img">
+            <img src="../IMAGES/abogados.jpeg" alt="Abogados">
+        </div>
+        <div class="about-txt">
+            <h2>Nosotros</h2>
+            <p>Rastro legal vial (RLV) somos una compañía creada en san José de Cúcuta, como la primer interesada en la disminución de la siniestralidad vial, contando con la experiencia y conocimiento necesarios en el ámbito de implementación de planes estratégicos de seguridad vial, manejo y experiencia en el lugar de los hechos y asesoría legal exclusivamente en el área de responsabilidad civil y penal, además su capacidad operativa estará a disposición de empresas públicas y privadas en la implementación y mantenimiento del PESV.</p>
+            <h3>Misión</h3>
+            <p>RLV (Rastro Legal Vial), su misión es contribuir con la protección del patrimonio económico y la integridad de nuestros clientes, mediante un portafolio de servicios jurídicos e investigación técnica de siniestros, e implementación del plan estratégico de seguridad vial dirigido a empresas públicas y privadas, bajo lineamientos éticos y claramente establecidos.</p>
+            <h3>Visión</h3>
+            <p>RLV (Rastro Legal Vial), habrá aportado a las entidades, organizaciones o empresas contratantes de sus servicios profesionales, todos los modos medios necesarios para ingresar a la elite de las estructuradas en temas de seguridad vial, aportando de manera directa al mejoramiento de producción empresarial y disminución de la morbimortalidad en siniestros viales, haciendo así que nuestra empresa sea posicionada como la más grande a nivel regional en el objeto de la ley marco del año 2011.</p>
+        </div>
+    </section>
 
-    <div class="container header-content">
-      <div class="header-txt">
-        <h1>Asesoría y Defensa Legal en Tránsito</h1>
-        <p>Expertos en seguridad y responsabilidad vial en Colombia.</p>
-        <a href="programar_citas.html" class="btn-1">Agendar Cita</a>
-      </div>
-      <div class="header-img">
-        <img src="..//IMAGES/header.jpeg" alt="Abogados en tránsito" />
-      </div>
-    </div>
-  </header>
+    <main class="servicios" id="servicios">
+        <h2>Nuestros Servicios</h2>
+        <div class="servicios-content container">
+            <div class="servicio-1"><i class="fas fa-gavel"></i><h3><b>Asesoría Jurídica en Siniestros Viales</b></h3><p>Obtén defensa legal especializada en accidentes de tránsito.</p></div>
+            <div class="servicio-1"><i class="fas fa-road"></i><h3><b>Implementación y Manejo del PESV</b></h3><p>Planes Estratégicos de Seguridad Vial para tu empresa.</p></div>
+            <div class="servicio-1"><i class="fas fa-tools"></i><h3><b>Reconstrucción Técnica y Analítica</b></h3><p>Investigación detallada para la reconstrucción de accidentes.</p></div>
+            <div class="servicio-1"><i class="fas fa-people-carry"></i><h3><b>Servicios Funerarios en Siniestros Viales</b></h3><p>Apoyo completo para servicios funerarios en casos de siniestros.</p></div>
+            <div class="servicio-1"><i class="fas fa-file-alt"></i><h3><b>Reclamaciones Ante Aseguradoras</b></h3><p>Gestionamos tus reclamos de manera efectiva y profesional.</p></div>
+        </div>
+    </main>
 
-  <section class="about container">
-    <div class="about-img">
-      <img src="..//IMAGES/abogados.jpeg" alt="Abogados" />
-    </div>
-    <div class="about-txt">
-      <h2>Nosotros</h2>
-      <p>
-        Rastro Legal Vial (RLV) es una compañía creada en San José de Cúcuta comprometida con la disminución de la siniestralidad vial, ofreciendo soluciones legales y técnicas con enfoque en seguridad.
-      </p>
-      <h3>Misión</h3>
-      <p>
-        Contribuir a la protección del patrimonio económico y la integridad de nuestros clientes, mediante asesoría jurídica y técnica, cumpliendo altos estándares éticos.
-      </p>
-      <h3>Visión</h3>
-      <p>
-        Ser líderes regionales en la prestación de servicios legales y técnicos en seguridad vial, impactando positivamente la productividad y disminuyendo la morbimortalidad vial.
-      </p>
-    </div>
-  </section>
-
-  <main class="servicios" id="servicios">
-    <h2>Nuestros Servicios</h2>
-    <div class="container servicios-content">
-      <div class="servicio-1"><i class="fas fa-gavel"></i><h3>Asesoría Jurídica</h3><p>Defensa legal en accidentes de tránsito.</p></div>
-      <div class="servicio-1"><i class="fas fa-road"></i><h3>Gestión PESV</h3><p>Implementación del plan estratégico de seguridad vial.</p></div>
-      <div class="servicio-1"><i class="fas fa-tools"></i><h3>Reconstrucción Técnica</h3><p>Investigación especializada en siniestros.</p></div>
-      <div class="servicio-1"><i class="fas fa-people-carry"></i><h3>Servicios Funerarios</h3><p>Apoyo completo en siniestros fatales.</p></div>
-      <div class="servicio-1"><i class="fas fa-file-alt"></i><h3>Reclamaciones</h3><p>Trámite ante aseguradoras.</p></div>
-    </div>
-  </main>
-
-  <footer class="footer">
-    <div class="container footer-content">
-      <div class="footer-logo">
-        <a href="#" class="logo">RLV</a>
-        <p>&copy; 2025 Rastro Legal Vial. Todos los derechos reservados.</p>
-      </div>
-      <div class="footer-links">
-        <ul>
-          <li><a href="#">Nosotros</a></li>
-          <li><a href="Servicios.html">Servicios</a></li>
-          <li><a href="programar_citas.html">Agendar Cita</a></li>
-          <li><a href="Contact.html">Contáctenos</a></li>
-          <li><a href="../HTML/Registro.html">Cerrar Sesión</a></li>
-        </ul>
-      </div>
-      <div class="footer-social">
-        <ul>
-          <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-          <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-        </ul>
-      </div>
-    </div>
-  </footer>
-
+    <footer class="footer">
+        <div class="footer-content container">
+            <div class="footer-logo">
+                <a href="#" class="logo">RLV</a>
+                <p>&copy; 2024 Rastro Legal Vial. Todos los derechos reservados.</p>
+            </div>
+            <div class="footer-links">
+                <ul>
+                    <li><a href="#">NOSOTROS</a></li>
+                    <li><a href="Servicios.html">SERVICIOS</a></li>
+                    <li><a href="programar_citas.html">AGENDAR CITA</a></li>
+                    <li><a href="Contact.html">CONTÁCTENOS</a></li>
+                    <li><a href="../HTML/IniciSesion.html">CERRAR SESIÓN</a></li>
+                </ul>
+            </div>
+            <div class="footer-social">
+                <ul>
+                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
+
 </html>
 
 
