--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -225,7 +225,7 @@
                     <li><a href="#">NOSOTROS</a></li>
                     <li><a href="Servicios.html">SERVICIOS</a></li>
                     <li><a href="programar_citas.html">AGENDAR CITA</a></li>
-                    <li><a href="Contact.html">CONTÁCTENOS</a></li>
+                    <li><a href="Contactar.html">CONTÁCTENOS</a></li>
                 </ul>
             </nav>
         </div>
@@ -278,7 +278,7 @@
                     <li><a href="Servicios.html">SERVICIOS</a></li>
                     <li><a href="programar_citas.html">AGENDAR CITA</a></li>
                     <li><a href="Contact.html">CONTÁCTENOS</a></li>
-                    <li><a href="../HTML/IniciSesion.html">CERRAR SESIÓN</a></li>
+                    <li><a href="../HTML/InicioSesion.html">CERRAR SESIÓN</a></li>
                 </ul>
             </div>
             <div class="footer-social">
