--- a/HTML/Módulos.html
+++ b/HTML/Módulos.html
@@ -16,25 +16,21 @@
       <div class="module-title">Clientes</div>
       <a href="clientes.html"><button class="module-button">Ir a Clientes</button></a>
     </div>
+
     <div class="module">
-      <img src="/mnt/data/824874f9-a553-43f3-8a62-f9519b6f87aa.png" alt="Inventario y Proveedores">
-      <div class="module-title">Inventarios / Proveedores</div>
-      <a href="inventario.html"><button class="module-button">Ver Inventario</button></a>
-    </div>
-    <div class="module">
-      <img src="/mnt/data/824874f9-a553-43f3-8a62-f9519b6f87aa.png" alt="RRHH y Nómina">
+      <img src="../IMAGES/recursos.jpg" alt="RRHH y Nómina">
       <div class="module-title">RRHH / Nómina</div>
-      <a href="../HTML/empleados.html"><button class="module-button">Ver RRHH</button></a>
+      <a href="Nómina.html"><button class="module-button">Ver RRHH</button></a>
     </div>
     <div class="module">
-      <img src="/mnt/data/824874f9-a553-43f3-8a62-f9519b6f87aa.png" alt="Contabilidad">
+      <img src="../IMAGES/Contabilidad.jpg" alt="Contabilidad">
       <div class="module-title">Contabilidad</div>
       <a href="contabilidad.html"><button class="module-button">Ver Contabilidad</button></a>
     </div>
     <div class="module">
-      <img src="/mnt/data/824874f9-a553-43f3-8a62-f9519b6f87aa.png" alt="Ventas">
+      <img src="../IMAGES/ventas.jpg" alt="Ventas">
       <div class="module-title">Ventas</div>
-      <a href="programar_citas.html"><button class="module-button">Ver Ventas</button></a>
+      <a href="Ventas.html"><button class="module-button">Ver Ventas</button></a>
     </div>
   </div>
 
